# SIEM

./: .gitignore  README.md
DOCS/Routes/: import_log.md
backend/: Cargo.toml  DOC.md
backend/migrations/2024-12-17-161142_create_accounts/: up.sql
backend/migrations/2024-12-17-161255_create_logs/: up.sql
backend/migrations/2024-12-17-161354_create_alert_rules/: down.sql  up.sql
backend/migrations/2024-12-17-205337_create_alerts/: up.sql
backend/migrations/2024-12-18-230628_create_host_1/: down.sql  up.sql
backend/migrations/2024-12-18-231240_create_host_logs_rel/: down.sql  up.sql
backend/src/: account.rs  agent.rs  alert.rs  auth.rs  auth_session.rs  batch_maker.rs  case_comments.rs  cases.rs  collector.rs  csrf.rs  database.rs  eql.rs  global.rs  handlers.rs  host.rs  log.rs  log_parser.rs  main.rs  message_queue.rs  rules.rs  schema.rs  storage.rs
backend/src/handlers/: account.rs  agent.rs  alert.rs  cases.rs  common.rs  csrf.rs  host.rs  log.rs  mod.rs  rule.rs
frontend/: bun.lockb  bunfig.toml  index.html  package.json  server.js
frontend/public/: alerts.html  cases.html  index.html  list-cases.html  login.html  register.html  search.html  settings.html
frontend/public/css/: alerts.css  cases.css  dashboard.css  list-cases.css  login.css  register.css  search.css  settings.css
frontend/public/js/: alerts.js  cases.js  index.js  list-cases.js  login.js  register.js  search.js  settings.js
frontend/services/: authService.js  csrfService.js  yamlParser.js  yamlPlugin.js
frontend/src/: App.jsx  app.html  index.css
frontend/src/components/: Navbar.jsx
frontend/src/pages/: Alerts.jsx  Cases.jsx  CasesList.jsx  Dashboard.jsx  Login.jsx  Register.jsx  (+2 more)
old/: bun.lockb  package.json
old/public/: alerts.html  login.html  register.html  settings.html
old/services/: yamlParser.js
old/src/: csrfService.js
(+39 files in other folders)
