[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = { version = "0.7.2", features = ["tempfile"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.9.0"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
csrf = "0.4.1"
dotenvy = "0.15.7"
env_logger = "0.11.6"
evalexpr = "12.0.1"
lazy_static = "1.5.0"
log = "0.4.22"
rand = "0.8.5"
regex = "1.11.1"
rusqlite = "0.32.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }

[profile.release]
debug = true
